--- a/src/components/AddStudents2Popup/AddStudents2Popup.css
+++ b/src/components/AddStudents2Popup/AddStudents2Popup.css
@@ -165,7 +165,7 @@
   color: var(--black);
   font-family: var(--font-avenir-lt-std);
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%)
+  top: 20vw;
+  left: 30vw;
+  
   }
