--- a/src/components/InterviewPopup/InterviewPopup.css
+++ b/src/components/InterviewPopup/InterviewPopup.css
@@ -150,7 +150,6 @@
   color: var(--black);
   font-family: var(--font-avenir-lt-std);
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%)
+  top: 20vw;
+  left: 30vw;
   }
