--- a/src/components/LogoutPopup/LogoutPopup.css
+++ b/src/components/LogoutPopup/LogoutPopup.css
@@ -114,7 +114,6 @@
   font-family: var(--font-avenir-lt-std);
   font-weight: bold;
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%)
+  top: 20vw;
+  left: 30vw;
   }
