--- a/src/components/FASTPopup/FASTPopup.css
+++ b/src/components/FASTPopup/FASTPopup.css
@@ -1,190 +1,81 @@
+/*
+  Based on TailwindCSS recommendations,
+  consider using classes instead of the `@apply` directive
+  @see https://tailwindcss.com/docs/reusing-styles#avoiding-premature-abstraction
+*/
 .fulcrum-assessment-test {
-  font-weight: bold;
-  position: relative;
-  letter-spacing: -0.02em;
-  line-height: 2.78vw;
-  font-size: var(--font-size-9xl)
-  }
+  @apply font-[bold] relative tracking-[-0.02em] leading-[2.78vw] text-[length:var(--font-size-9xl)];
+}
 .instructions {
-  position: relative;
-  letter-spacing: -0.02em;
-  line-height: 2.78vw;
-  cursor: pointer;
-  border: 0;
-  padding: 0;
-  background-color: transparent;
-  font-size: var(--font-size-lg);
+  @apply relative tracking-[-0.02em] leading-[2.78vw] cursor-pointer bg-transparent text-[length:var(--font-size-lg)] text-[color:var(--black)] text-left inline-block p-0 border-0;
   font-family: var(--font-avenir-lt-std);
-  color: var(--black);
-  text-align: left;
-  display: inline-block
-  }
+}
 .instructions-parent {
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  justify-content: flex-start;
-  gap: 1.92vw
-  }
+  @apply flex flex-row items-start justify-start gap-[1.92vw];
+}
 .frame-child176 {
-  position: relative;
-  width: 34.72vw;
-  height: 0.27vw
-  }
+  @apply relative w-[34.72vw] h-[0.27vw];
+}
 .frame-parent236 {
-  width: 34.72vw;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start;
-  gap: var(--gap-12xs)
-  }
+  @apply w-[34.72vw] flex flex-col items-start justify-start gap-[var(--gap-12xs)];
+}
 .please-ensure-that {
-  margin-bottom: 0;
-  font-size: var(--font-size-lg)
-  }
+  @apply text-[length:var(--font-size-lg)] mb-0;
+}
 .please-ensure-that-you-have-a {
-  margin: 0;
-  padding-left: var(--padding-5xl)
-  }
+  @apply pl-[var(--padding-5xl)] m-0;
+}
 .please-ensure-that-container {
-  position: relative;
-  letter-spacing: -0.02em;
-  line-height: 2.38vw;
-  font-weight: light
-  }
+  @apply relative tracking-[-0.02em] leading-[2.38vw] font-[light];
+}
 .frame-parent235 {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start;
-  gap: var(--gap-lg)
-  }
+  @apply flex flex-col items-start justify-start gap-[var(--gap-lg)];
+}
 .rectangle-input {
-  position: relative;
-  border-radius: 0.13vw;
-  border: 0.07vw solid var(--icon-grey);
-  box-sizing: border-box;
-  width: 1.12vw;
-  height: 1.12vw
-  }
+  @apply relative border-[color:var(--icon-grey)] box-border w-[1.12vw] h-[1.12vw] rounded-[0.13vw] border-[0.07vw] border-solid;
+}
 .terms-and-conditions {
-  color: var(--purple)
-  }
+  @apply text-[color:var(--purple)];
+}
 .i-agree-to-container {
-  text-decoration: none;
-  position: relative;
-  color: inherit;
-  width: 17vw
-  }
+  @apply no-underline relative text-inherit w-[17vw];
+}
 .rectangle-parent5 {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: flex-start;
-  gap: var(--gap-2xs);
-  font-weight: light
-  }
+  @apply flex flex-row items-center justify-start gap-[var(--gap-2xs)] font-[light];
+}
 .start-now2 {
-  position: relative;
-  font-size: var(--font-size-xl);
+  @apply relative text-[length:var(--font-size-xl)] text-[color:var(--white)] text-left inline-block w-[6.35vw] shrink-0 font-[bold];
   font-family: var(--font-avenir-lt-std);
-  color: var(--white);
-  text-align: left;
-  display: inline-block;
-  width: 6.35vw;
-  flex-shrink: 0;
-  font-weight: bold
-  }
+}
 .solarplay-bold-icon4 {
-  position: relative;
-  width: 1.06vw;
-  height: 1.06vw;
-  overflow: hidden;
-  flex-shrink: 0
-  }
+  @apply relative w-[1.06vw] h-[1.06vw] overflow-hidden shrink-0;
+}
 .start-now-container {
-  cursor: pointer;
-  border: 0;
-  padding: var(--padding-base) var(--padding-xl);
-  background-color: var(--color-mediumseagreen);
-  border-radius: var(--br-5xs);
-  width: 10.52vw;
-  overflow: hidden;
-  flex-shrink: 0;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  box-sizing: border-box;
-  gap: var(--gap-3xs)
-  }
+  @apply cursor-pointer pt-[var(--padding-base)] pr-[var(--padding-xl)] pb-[var(--padding-base)] pl-[var(--padding-xl)] bg-[color:var(--color-mediumseagreen)] rounded-[var(--br-5xs)] w-[10.52vw] overflow-hidden shrink-0 flex flex-row items-center justify-center box-border gap-[var(--gap-3xs)] border-0;
+}
 .frame-parent237 {
-  display: flex;
-  flex-direction: row;
-  align-items: flex-end;
-  justify-content: flex-start;
-  gap: 7.61vw;
-  font-size: var(--font-size-base);
-  font-family: var(--font-avenir-lt-std)
-  }
-.frame-parent234, .fulcrum-assessment-test-parent {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start
-  }
-.frame-parent234 {
-  gap: var(--gap-17xl);
-  font-size: var(--font-inherit);
-  color: var(--icon-grey);
-  font-family: var(--font-inherit)
-  }
-.fulcrum-assessment-test-parent {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  font-size: 1.56vw;
-  transform: translate(-50%, -50%)
-  }
-.vector-icon37 {
-  position: absolute;
-  height: 34%;
-  width: 34.01%;
-  top: 32.99%;
-  right: 32.99%;
-  bottom: 33.01%;
-  left: 33%;
-  max-width: 100%;
-  overflow: hidden;
-  max-height: 100%
-  }
-.basilcross-outline14 {
-  cursor: pointer;
-  border: 0;
-  padding: 0;
-  background-color: transparent;
-  position: absolute;
-  top: 1.85vw;
-  left: 36.18vw;
-  width: 2.65vw;
-  height: 2.65vw;
-  overflow: hidden
-  }
-.fastpopup {
-  border-radius: var(--br-base);
-  background-color: var(--white);
-  width: 40.67vw;
-  height: 27.25vw;
-  overflow: hidden;
-  max-width: 100%;
-  max-height: 100%;
-  text-align: left;
-  font-size: 1.56vw;
-  color: var(--black);
+  @apply flex flex-row items-end justify-start gap-[7.61vw] text-[length:var(--font-size-base)];
   font-family: var(--font-avenir-lt-std);
-  position: absolute;
-  top: 20vw;
-  left: 30vw;
+}
+.frame-parent234,
+.fulcrum-assessment-test-parent {
+  @apply flex flex-col items-start justify-start;
+}
+.frame-parent234 {
+  @apply gap-[var(--gap-17xl)] text-[length:var(--font-inherit)] text-[color:var(--icon-grey)];
+  font-family: var(--font-inherit);
+}
+.fulcrum-assessment-test-parent {
+  @apply absolute text-[1.56vw] -translate-x-2/4 -translate-y-2/4 left-[2.5vw] top-[2.5vw];
+}
+.vector-icon37 {
+  @apply absolute h-[34%] w-[34.01%] max-w-full overflow-hidden max-h-full left-[33%] right-[32.99%] top-[32.99%] bottom-[33.01%];
+}
+.basilcross-outline14 {
+  @apply cursor-pointer bg-transparent absolute w-[2.65vw] h-[2.65vw] overflow-hidden p-0 border-0 left-[36.18vw] top-[1.85vw];
+}
+.fastpopup {
+  @apply rounded-[var(--br-base)] bg-[color:var(--white)] w-[40.67vw] h-[27.25vw] overflow-hidden max-w-full max-h-full text-left text-[1.56vw] text-[color:var(--black)] absolute left-[30vw] top-[20vw];
+  font-family: var(--font-avenir-lt-std);
   /* transform: translate(-50%, -50%) */
-  }
+}
