--- a/src/components/TopicWiseAnalysis/TopicWiseAnalysis.css
+++ b/src/components/TopicWiseAnalysis/TopicWiseAnalysis.css
@@ -3,7 +3,7 @@
   consider using classes instead of the `@apply` directive
   @see https://tailwindcss.com/docs/reusing-styles#avoiding-premature-abstraction
 */
-.topic-wise-analysis3 {
+/* .topic-wise-analysis3 {
     @apply relative tracking-[-0.02em] leading-[2.78vw];
   }
   .topic-wise-analysis-wrapper1 {
@@ -47,20 +47,22 @@
   }
   .frame-child151 {
     @apply bg-[color:var(--color-mediumseagreen)] w-[8.99vw];
-  }
-  .frame-parent203,
-  .frame-parent204,
-  .proficiency-parent1 {
+  } */
+  /* .frame-parent203
+  {
     @apply flex flex-col items-start justify-start gap-[var(--gap-21xl)];
   }
-  .frame-parent203,
-  .proficiency-parent1 {
+  .frame-parent203
+  {
     @apply gap-[var(--gap-mini)];
   }
   .frame-parent203 {
     @apply absolute flex-row gap-[var(--gap-92xl)] text-[length:var(--font-size-base)] left-[1.85vw] top-[4.43vw];
+  } */
+  .frame-parent203 {
+    @apply flex items-start justify-start absolute flex-row gap-[var(--gap-92xl)] text-[length:var(--font-size-base)] left-[1.85vw] top-[4.43vw];
   }
-  .frame-child153 {
+  /* .frame-child153 {
     @apply relative border-t-[color:black] box-border w-[47.82vw] h-[0.07vw] opacity-[0.18] border-t-[0.07vw] border-solid;
   }
   .line-parent9 {
@@ -68,5 +70,5 @@
   }
   .frame-parent202 {
     @apply relative rounded-[var(--br-base)] bg-[color:var(--white)] w-[50.93vw] overflow-auto h-[29vw] left-[21vw] top-[9.2vw];
-  }
+  } */
   
