--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -1183,6 +1183,57 @@ video {
 .top-\[40\.68vw\] {
   top: 40.68vw;
 }
+.left-\[2\.98vw\] {
+  left: 2.98vw;
+}
+.top-\[6\.28vw\] {
+  top: 6.28vw;
+}
+.top-\[0\.4vw\] {
+  top: 0.4vw;
+}
+.left-\[-0\.03vw\] {
+  left: -0.03vw;
+}
+.top-\[-0\.03vw\] {
+  top: -0.03vw;
+}
+.left-\[18\.29vw\] {
+  left: 18.29vw;
+}
+.left-\[0\.79vw\] {
+  left: 0.79vw;
+}
+.top-\[4\.7vw\] {
+  top: 4.7vw;
+}
+.left-\[2\.78vw\] {
+  left: 2.78vw;
+}
+.top-\[3\.44vw\] {
+  top: 3.44vw;
+}
+.left-\[2\.84vw\] {
+  left: 2.84vw;
+}
+.top-\[40\.34vw\] {
+  top: 40.34vw;
+}
+.top-\[21\.3vw\] {
+  top: 21.3vw;
+}
+.left-\[48\.21vw\] {
+  left: 48.21vw;
+}
+.top-\[9\.46vw\] {
+  top: 9.46vw;
+}
+.left-\[0\.73vw\] {
+  left: 0.73vw;
+}
+.top-\[22\.49vw\] {
+  top: 22.49vw;
+}
 .z-0 {
   z-index: 0;
 }
@@ -1309,6 +1360,9 @@ video {
 }
 .flex {
   display: flex;
+}
+.grid {
+  display: grid;
 }
 .hidden {
   display: none;
@@ -1642,6 +1696,24 @@ video {
 }
 .h-screen {
   height: 100vh;
+}
+.h-\[43\.12vw\] {
+  height: 43.12vw;
+}
+.h-\[53\.64vw\] {
+  height: 53.64vw;
+}
+.h-\[9\.66vw\] {
+  height: 9.66vw;
+}
+.h-\[8\.86vw\] {
+  height: 8.86vw;
+}
+.h-\[6\.15vw\] {
+  height: 6.15vw;
+}
+.h-\[1\.92vw\] {
+  height: 1.92vw;
 }
 .max-h-80 {
   max-height: 20rem;
@@ -2108,11 +2180,47 @@ video {
 .w-\[50\.66vw\] {
   width: 50.66vw;
 }
+.w-\[39\.75vw\] {
+  width: 39.75vw;
+}
+.w-\[32\.94vw\] {
+  width: 32.94vw;
+}
+.w-\[15\.28vw\] {
+  width: 15.28vw;
+}
+.w-\[0\.4vw\] {
+  width: 0.4vw;
+}
+.w-\[24\.47vw\] {
+  width: 24.47vw;
+}
+.w-\[23\.88vw\] {
+  width: 23.88vw;
+}
+.w-\[35\.25vw\] {
+  width: 35.25vw;
+}
+.w-\[32\.28vw\] {
+  width: 32.28vw;
+}
+.w-\[30\.22vw\] {
+  width: 30.22vw;
+}
+.w-\[29\.76vw\] {
+  width: 29.76vw;
+}
+.w-\[4\.96vw\] {
+  width: 4.96vw;
+}
 .max-w-full {
   max-width: 100%;
 }
 .shrink-0 {
   flex-shrink: 0;
+}
+.origin-\[0_0\] {
+  transform-origin: 0 0;
 }
 .-translate-x-2\/4 {
   --tw-translate-x: -50%;
@@ -2120,6 +2228,10 @@ video {
 }
 .-translate-y-2\/4 {
   --tw-translate-y: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.rotate-90 {
+  --tw-rotate: 90deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .transform {
@@ -2130,6 +2242,12 @@ video {
 }
 .resize {
   resize: both;
+}
+.grid-cols-\[1fr\] {
+  grid-template-columns: 1fr;
+}
+.grid-cols-\[repeat\(2\2c 1fr\)\] {
+  grid-template-columns: repeat(2,1fr);
 }
 .flex-row {
   flex-direction: row;
@@ -2377,6 +2495,21 @@ video {
 .gap-\[var\(--gap-91xl\)\] {
   gap: var(--gap-91xl);
 }
+.gap-\[16\.2vw\] {
+  gap: 16.2vw;
+}
+.gap-\[var\(--gap-32xl\)\] {
+  gap: var(--gap-32xl);
+}
+.gap-\[15\.34vw\] {
+  gap: 15.34vw;
+}
+.gap-\[15px\] {
+  gap: 15px;
+}
+.gap-\[px\] {
+  gap: px;
+}
 .overflow-auto {
   overflow: auto;
 }
@@ -2485,6 +2618,9 @@ video {
 .border-\[0\.13vw\] {
   border-width: 0.13vw;
 }
+.border-\[0\.1vw\] {
+  border-width: 0.1vw;
+}
 .border-t-\[0\.06vw\] {
   border-top-width: 0.06vw;
 }
@@ -2548,6 +2684,10 @@ video {
 }
 .border-\[color\:var\(--light-base-chart-title\)\] {
   border-color: var(--light-base-chart-title);
+}
+.border-\[\#e94664\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(233 70 100 / var(--tw-border-opacity));
 }
 .border-t-\[color\:black\] {
   --tw-border-opacity: 1;
@@ -2666,6 +2806,9 @@ video {
 .bg-\[rgba\(96\2c 91\2c 255\2c 0\.3\)\] {
   background-color: rgba(96,91,255,0.3);
 }
+.bg-\[color\:var\(--color-darkorange\)\] {
+  background-color: var(--color-darkorange);
+}
 .bg-cover {
   background-size: cover;
 }
@@ -2711,6 +2854,10 @@ video {
 .py-2\.5 {
   padding-top: 0.625rem;
   padding-bottom: 0.625rem;
+}
+.px-\[1\.39vw\] {
+  padding-left: 1.39vw;
+  padding-right: 1.39vw;
 }
 .pb-\[var\(--padding-4xs\)\] {
   padding-bottom: var(--padding-4xs);
@@ -2864,6 +3011,12 @@ video {
 }
 .pt-\[var\(--padding-mini\)\] {
   padding-top: var(--padding-mini);
+}
+.pb-\[var\(--padding-3xs\)\] {
+  padding-bottom: var(--padding-3xs);
+}
+.pt-\[var\(--padding-3xs\)\] {
+  padding-top: var(--padding-3xs);
 }
 .text-left {
   text-align: left;
