--- a/src/components/SettingsPane/SettingsPane.css
+++ b/src/components/SettingsPane/SettingsPane.css
@@ -3,7 +3,7 @@
   consider using classes instead of the `@apply` directive
   @see https://tailwindcss.com/docs/reusing-styles#avoiding-premature-abstraction
 */
-/* .frame-child250 {
+.frame-child250 {
     @apply absolute top-[calc(50%_-_24.34vw)] bg-[color:var(--white)] shadow-[0.07vw_0_0.26vw_rgba(0,0,0,0.15)] w-[17.33vw] h-[48.68vw] left-0;
   }
   .my-profile6 {
@@ -30,7 +30,7 @@
   .frame-parent194 {
     @apply absolute w-[8.47vw] h-[8.99vw] left-[2.65vw] top-[3.17vw];
   }
-   */
+  
    .frame-parent195 {
     @apply flex flex-col items-start justify-start absolute gap-[var(--gap-xl)];
   }
