--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -1122,6 +1122,123 @@ video {
 .top-\[23\.68px\] {
   top: 23.68px;
 }
+.left-\[calc\(50\%_-_20\.5vw\)\] {
+  left: calc(50% - 20.5vw);
+}
+.top-\[2\.38vw\] {
+  top: 2.38vw;
+}
+.left-1\/4 {
+  left: 25%;
+}
+.left-\[800\.104px\] {
+  left: 800.104px;
+}
+.top-\[40\.68px\] {
+  top: 40.68px;
+}
+.top-\[50\.68px\] {
+  top: 50.68px;
+}
+.left-\[900\.104px\] {
+  left: 900.104px;
+}
+.left-\[1000\.104px\] {
+  left: 1000.104px;
+}
+.left-\[950\.104px\] {
+  left: 950.104px;
+}
+.left-\[920\.104px\] {
+  left: 920.104px;
+}
+.left-\[930\.104px\] {
+  left: 930.104px;
+}
+.left-60 {
+  left: 15rem;
+}
+.top-40 {
+  top: 10rem;
+}
+.left-\[40\.34vw\] {
+  left: 40.34vw;
+}
+.bottom-\[33\%\] {
+  bottom: 33%;
+}
+.left-\[32\.99\%\] {
+  left: 32.99%;
+}
+.right-\[33\%\] {
+  right: 33%;
+}
+.bottom-\[422\.4px\] {
+  bottom: 422.4px;
+}
+.left-\[256px\] {
+  left: 256px;
+}
+.left-\[320px\] {
+  left: 320px;
+}
+.left-\[422\.72px\] {
+  left: 422.72px;
+}
+.left-\[517\.12px\] {
+  left: 517.12px;
+}
+.right-\[422\.4px\] {
+  right: 422.4px;
+}
+.top-\[192px\] {
+  top: 192px;
+}
+.top-\[27\.136px\] {
+  top: 27.136px;
+}
+.top-\[30\.464px\] {
+  top: 30.464px;
+}
+.top-\[422\.72px\] {
+  top: 422.72px;
+}
+.bottom-\[422\.72px\] {
+  bottom: 422.72px;
+}
+.left-\[322\.56px\] {
+  left: 322.56px;
+}
+.left-\[422\.656px\] {
+  left: 422.656px;
+}
+.left-\[516\.992px\] {
+  left: 516.992px;
+}
+.right-\[422\.72px\] {
+  right: 422.72px;
+}
+.top-\[27\.008px\] {
+  top: 27.008px;
+}
+.top-\[30\.592px\] {
+  top: 30.592px;
+}
+.top-\[422\.656px\] {
+  top: 422.656px;
+}
+.left-\[calc\(50\%_-_262\.4px\)\] {
+  left: calc(50% - 262.4px);
+}
+.top-\[30\.46px\] {
+  top: 30.46px;
+}
+.left-\[516\.352px\] {
+  left: 516.352px;
+}
+.top-\[350px\] {
+  top: 350px;
+}
 .z-0 {
   z-index: 0;
 }
@@ -1227,6 +1344,18 @@ video {
 }
 .mb-0 {
   margin-bottom: 0px;
+}
+.mt-\[-6\.784px\] {
+  margin-top: -6.784px;
+}
+.mt-\[-6\.752px\] {
+  margin-top: -6.752px;
+}
+.mt-\[6\.784px\] {
+  margin-top: 6.784px;
+}
+.mt-\[-10px\] {
+  margin-top: -10px;
 }
 .box-border {
   box-sizing: border-box;
@@ -1572,6 +1701,33 @@ video {
 }
 .h-\[23\.92px\] {
   height: 23.92px;
+}
+.h-\[33\.47vw\] {
+  height: 33.47vw;
+}
+.h-\[27\.136px\] {
+  height: 27.136px;
+}
+.h-\[429\.056px\] {
+  height: 429.056px;
+}
+.h-\[27\.008px\] {
+  height: 27.008px;
+}
+.h-\[428\.928px\] {
+  height: 428.928px;
+}
+.h-\[428\.41px\] {
+  height: 428.41px;
+}
+.h-\[13\.56px\] {
+  height: 13.56px;
+}
+.h-\[430\.41px\] {
+  height: 430.41px;
+}
+.h-\[440\.41px\] {
+  height: 440.41px;
 }
 .max-h-80 {
   max-height: 20rem;
@@ -2008,6 +2164,45 @@ video {
 .w-\[33\.92px\] {
   width: 33.92px;
 }
+.w-\[44\.31vw\] {
+  width: 44.31vw;
+}
+.w-\[257\.408px\] {
+  width: 257.408px;
+}
+.w-\[27\.136px\] {
+  width: 27.136px;
+}
+.w-\[567\.808px\] {
+  width: 567.808px;
+}
+.w-\[257\.28px\] {
+  width: 257.28px;
+}
+.w-\[27\.008px\] {
+  width: 27.008px;
+}
+.w-\[566\.464px\] {
+  width: 566.464px;
+}
+.w-\[567\.16px\] {
+  width: 567.16px;
+}
+.w-\[257\.408vw\] {
+  width: 257.408vw;
+}
+.w-\[13\.56px\] {
+  width: 13.56px;
+}
+.w-\[20px\] {
+  width: 20px;
+}
+.w-\[25px\] {
+  width: 25px;
+}
+.w-\[250px\] {
+  width: 250px;
+}
 .max-w-full {
   max-width: 100%;
 }
@@ -2023,6 +2218,14 @@ video {
 }
 .-translate-y-2\/4 {
   --tw-translate-y: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.-translate-x-\[256px\] {
+  --tw-translate-x: -256px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.-translate-y-\[192px\] {
+  --tw-translate-y: -192px;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .rotate-90 {
@@ -2281,6 +2484,21 @@ video {
 .gap-\[97\.408px\] {
   gap: 97.408px;
 }
+.gap-\[16px\] {
+  gap: 16px;
+}
+.gap-\[272px\] {
+  gap: 272px;
+}
+.gap-\[3\.84px\] {
+  gap: 3.84px;
+}
+.gap-\[64px\] {
+  gap: 64px;
+}
+.gap-\[3\.776px\] {
+  gap: 3.776px;
+}
 .overflow-auto {
   overflow: auto;
 }
@@ -2356,6 +2574,18 @@ video {
 .rounded-\[1\.664px\] {
   border-radius: 1.664px;
 }
+.rounded-\[4\.096px\] {
+  border-radius: 4.096px;
+}
+.rounded-\[8\.9088px\] {
+  border-radius: 8.9088px;
+}
+.rounded-\[4\.064px\] {
+  border-radius: 4.064px;
+}
+.rounded-\[8\.896px\] {
+  border-radius: 8.896px;
+}
 .border {
   border-width: 1px;
 }
@@ -2391,6 +2621,9 @@ video {
 }
 .border-\[1px\] {
   border-width: 1px;
+}
+.border-\[0\.896px\] {
+  border-width: 0.896px;
 }
 .border-t-\[0\.06vw\] {
   border-top-width: 0.06vw;
@@ -2746,6 +2979,24 @@ video {
 .pt-\[var\(--padding-xs\)\] {
   padding-top: var(--padding-xs);
 }
+.pb-\[16px\] {
+  padding-bottom: 16px;
+}
+.pl-\[160px\] {
+  padding-left: 160px;
+}
+.pl-\[64px\] {
+  padding-left: 64px;
+}
+.pr-\[160px\] {
+  padding-right: 160px;
+}
+.pr-\[64px\] {
+  padding-right: 64px;
+}
+.pt-\[16px\] {
+  padding-top: 16px;
+}
 .text-left {
   text-align: left;
 }
@@ -2855,6 +3106,18 @@ video {
 .text-\[20px\] {
   font-size: 20px;
 }
+.text-\[20\.096px\] {
+  font-size: 20.096px;
+}
+.text-\[length\:16px\] {
+  font-size: 16px;
+}
+.text-\[length\:24px\] {
+  font-size: 24px;
+}
+.text-\[20\.224px\] {
+  font-size: 20.224px;
+}
 .lowercase {
   text-transform: lowercase;
 }
@@ -2878,6 +3141,12 @@ video {
 }
 .leading-\[30\.46px\] {
   line-height: 30.46px;
+}
+.leading-\[35\.9424px\] {
+  line-height: 35.9424px;
+}
+.leading-\[35\.936px\] {
+  line-height: 35.936px;
 }
 .tracking-\[-0\.02em\] {
   letter-spacing: -0.02em;
